# copropilot-shared

./: launch.json  pyproject.toml
src/copropilot_shared/: __init__.py  database.py
src/copropilot_shared/models/: __init__.py  models.py
