[project]
name = "copropilot-shared"
version = "0.1.0"
description = "Modeles pydantic partages backend/processing"
readme = "README.md"
authors = [
    { name = "Frederic Ferriere"" }
]
requires-python = ">=3.13"
dependencies = ["pydantic>=2.0",
    "sqlalchemy>=2.0",
    ]

[build-system]
requires = ["uv_build>=0.11.17,<0.12.0"]
build-backend = "uv_build"
