[project]
name = "copropilot-shared"
version = "1.1.0"
description = "Modeles pydantic partages backend/processing"
readme = "README.md"
authors = [
    { name = "Frederic Ferriere" }
]
requires-python = ">=3.13"
dependencies = [
    "sqlmodel>=0.0.21",
    "psycopg2-binary>=2.9",
    "sqlalchemy>=2.0.50",
    "dotenv>=0.9.9",
]

[build-system]
requires = ["uv_build>=0.11.17,<0.12.0"]
build-backend = "uv_build"
